# actix-todo-api

./: .env.example  Cargo.toml
migrations/2022-12-11-130102_create_user/: up.sql
migrations/2022-12-20-160122_create_todo/: up.sql
src/: api_error.rs  db.rs  main.rs  schema.rs
src/auth/: middlewares.rs  mod.rs  models.rs  routes.rs  service.rs
src/todo/: mod.rs  model.rs  routes.rs
src/user/: model.rs  routes.rs
thunder-tests/: thunderCollection.json  thunderEnvironment.json  thunderclient.json
