[package]
name = "actix-todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
listenfd = "1.0.0"
log = "0.4.17"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.2", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
diesel_migrations = "2.0.0"
lazy_static = "1.4"
r2d2 = "0.8"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
bcrypt = "0.13.0"
validator = { version = "0.16.0", features = ["validator_derive", "derive"] }
futures = "0.3.25"
